--- a/scripts/mmd/docSpotlight/spotlight.html
+++ b/scripts/mmd/docSpotlight/spotlight.html
@@ -3,7 +3,8 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<title>SpotLight</title>
+	<meta name="author" content="nwind">
+	<title>SpotLight - document search</title>
 	<link rel="stylesheet" href="style/base.css" type="text/css" media="screen" charset="utf-8" />
 	<link rel="stylesheet" href="style/index.css" type="text/css" media="screen" charset="utf-8" />
 </head>
@@ -12,6 +13,9 @@
 
 	<div id="header">
 		<div id="logo">
+		</div>
+		<div id="help">
+			help
 		</div>
 	</div>
 
@@ -31,8 +35,12 @@
 
 <script src="js/lib/core.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/lib/Dom.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/data.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/lib/sorttable.js" type="text/javascript" charset="utf-8"></script>
+<script src="Data/data.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/lib/ChineseAscii.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/lib/spotlight.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/lib/json.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/lib/persist/persist-min.js" type="text/javascript" charset="utf-8"></script>
+
 <script src="js/index.js" type="text/javascript" charset="utf-8"></script>
 </html>
